--- a/private/Gemfile
+++ b/private/Gemfile
@@ -30,7 +30,7 @@ gem 'coffee-rails', '~> 4.2'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 
-gem 'turbolinks', '~> 5'
+
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -38,6 +38,7 @@ group :development, :test do
   gem 'database_cleaner'
   gem 'rails-controller-testing', '~> 1.0.2'
   gem 'rspec-rails'
+  gem 'bullet'
 end
 
 group :development do
