--- a/private/Gemfile
+++ b/private/Gemfile
@@ -30,15 +30,14 @@ gem 'jbuilder', '~> 2.7'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
 gem 'faker'
-gem "will_paginate"
+gem 'will_paginate'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
+  
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
-  gem 'database_cleaner'
-  gem 'rails-controller-testing', '~> 1.0.2'
+  
   gem 'rspec-rails'
-  gem 'bullet'
 end
 
 group :development do
