--- a/private-events-1/private/Gemfile
+++ b/private-events-1/private/Gemfile
@@ -37,7 +37,7 @@ group :development, :test do
 
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
 
-  gem 'rspec-rails'
+  gem 'rspec-rails', '~> 4.0.0.beta3'
 end
 
 group :development do
