--- a/private-events-1/private/.stickler.yml
+++ b/private-events-1/private/.stickler.yml
@@ -4,7 +4,14 @@ linters:
 files:
   ignore:
     - "bin/*"
-    - "db/*"
+    - "db/**"
     - "config/*"
     - "Guardfile"
     - "Rakefile"
+    - "config/environments/production.rb"
+    - "config/environments/test.rb"
+    - "config/environments/puma.rb"
+    - "config/environments/spring.rb"
+  AllCops:
+  Documentation:
+    Enabled: false
